Update laucher icon and keystore

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,14 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.7.3"
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icons/logo.png"
+  adaptive_icon_foreground: "assets/icons/foreground.png"
+  adaptive_icon_background: "assets/icons/background.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -42,6 +50,7 @@ flutter:
   assets:
     - assets/images/cover-1.jpg
     - assets/images/cover-2.jpg
+
   #  - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
